lib/GSL/Special/ellint.h

int gsl_sf_ellint_Kcomp_e(double k,int mode,double* result);
double gsl_sf_ellint_Kcomp(double k,int mode);
int gsl_sf_ellint_Ecomp_e(double k,int mode,double* result);
double gsl_sf_ellint_Ecomp(double k,int mode);
int gsl_sf_ellint_F_e(double phi,double k,int mode,double* result);
double gsl_sf_ellint_F(double phi,double k,int mode);
int gsl_sf_ellint_E_e(double phi,double k,int mode,double* result);
double gsl_sf_ellint_E(double phi,double k,int mode);
int gsl_sf_ellint_P_e(double phi,double k,double n,int mode,double* result);
double gsl_sf_ellint_P(double phi,double k,double n,int mode);
int gsl_sf_ellint_D_e(double phi,double k,double n,int mode,double* result);
double gsl_sf_ellint_D(double phi,double k,double n,int mode);
int gsl_sf_ellint_RC_e(double x,double y,int mode,double* result);
double gsl_sf_ellint_RC(double x,double y,int mode);
int gsl_sf_ellint_RD_e(double x,double y,double z,int mode,double* result);
double gsl_sf_ellint_RD(double x,double y,double z,int mode);
int gsl_sf_ellint_RF_e(double x,double y,double z,int mode,double* result);
double gsl_sf_ellint_RF(double x,double y,double z,int mode);
int gsl_sf_ellint_RJ_e(double x,double y,double z,double p,int mode,double* result);
double gsl_sf_ellint_RJ(double x,double y,double z,double p,int mode);